added 5 day forecasat functionality

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
         <section class="col-9">
             <div class="card mt-2 border border-dark rounded-0">
                 <div class="card-body">
-                  <h2 class="city-name"> test</h2>
-                  <h4 class="temp"></h4>
-                  <h4 class="wind" ></h4>
-                  <h4 class="humid"></h4>
+                  <h2 id="city-weather-name"> test</h2>
+                  <img id="icon">
+                  <h4 id="temp"></h4>
+                  <h4 id="wind" ></h4>
+                  <h4 id="humid"></h4>
                 </div>
             </div>
-            <div class="row mt-3">
+            <div class="row mt-3" id="5-day-div">
                 <h3>5-Day Forecast</h3>
-                <div class="card col mt-2 border border-dark rounded-0 m-2 bg-dark text-light">test</div>
-                <div class="card col mt-2 border border-dark rounded-0 m-2 bg-dark text-light">test</div>
-                <div class="card col mt-2 border border-dark rounded-0 m-2 bg-dark text-light">test</div>
-                <div class="card col mt-2 border border-dark rounded-0 m-2 bg-dark text-light">test</div>
-                <div class="card col mt-2 border border-dark rounded-0 m-2 bg-dark text-light">test</div>
-                
+                <div class="card col mt-2 border border-dark rounded-0 m-2 bg-dark text-light five-day-card"></div>
+                <div class="card col mt-2 border border-dark rounded-0 m-2 bg-dark text-light five-day-card"></div>
+                <div class="card col mt-2 border border-dark rounded-0 m-2 bg-dark text-light five-day-card"></div>
+                <div class="card col mt-2 border border-dark rounded-0 m-2 bg-dark text-light five-day-card"></div>
+                <div class="card col mt-2 border border-dark rounded-0 m-2 bg-dark text-light five-day-card"></div>
             </div>
         </section>
         </div>
