added city history functionality

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="mb-3">
                   <input class="form-control border-dark" id="search-input" >
                 </div>
-                <div class="d-grid gap-2">
+                <div class="d-grid gap-2" id="city-card-div">
                 <button class="btn btn-primary btn-lg" id="search-btn" type="submit">Search</button>
                 </div>
             </form>
